# TCC_2025-firmware

./: .clang-format  CMakeLists.txt  README.md  lambda_function.txt  policy.json  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c
main/controllers/: adc_controller.c  cam_controller.c
main/controllers/include/controllers/: adc_controller.h  cam_controller.h
main/services/: timer_sync.c  web_service.c
main/services/include/services/: timer_sync.h  web_service.h
